my-cluster-backup/mutatingwebhookconfiguration-aks-webhook-admission-controller.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"admissionregistration.k8s.io/v1beta1","kind":"MutatingWebhookConfiguration","metadata":{"annotations":{},"labels":{"admissions.enforcer/disabled":"true"},"name":"aks-webhook-admission-controller"},"webhooks":[{"clientConfig":{"caBundle":"LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUU2VENDQXRHZ0F3SUJBZ0lSQUxRNGdtZEIxMFZXTXdaZVIxU3c5UW93RFFZSktvWklodmNOQVFFTEJRQXcKRFRFTE1Ba0dBMVVFQXhNQ1kyRXdJQmNOTWpFd016RXdNRFUwTlRReldoZ1BNakExTVRBek1UQXdOVFUxTkROYQpNQTB4Q3pBSkJnTlZCQU1UQW1OaE1JS [...]
  creationTimestamp: "2021-03-10T06:00:16Z"
  labels:
    admissions.enforcer/disabled: "true"
  managedFields:
  - apiVersion: admissionregistration.k8s.io/v1beta1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:kubectl.kubernetes.io/last-applied-configuration: {}
        f:labels:
          .: {}
          f:admissions.enforcer/disabled: {}
      f:webhooks:
        .: {}
        k:{"name":"aks-webhook-admission-controller.azmk8s.io"}:
          .: {}
          f:admissionReviewVersions: {}
          f:clientConfig:
            .: {}
            f:caBundle: {}
            f:url: {}
          f:failurePolicy: {}
          f:matchPolicy: {}
          f:name: {}
          f:namespaceSelector: {}
          f:objectSelector: {}
          f:reinvocationPolicy: {}
          f:rules: {}
          f:sideEffects: {}
          f:timeoutSeconds: {}
    manager: kubectl_v1.18.8
    operation: Update
    time: "2021-03-10T06:00:16Z"
  name: aks-webhook-admission-controller
webhooks:
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUU2VENDQXRHZ0F3SUJBZ0lSQUxRNGdtZEIxMFZXTXdaZVIxU3c5UW93RFFZSktvWklodmNOQVFFTEJRQXcKRFRFTE1Ba0dBMVVFQXhNQ1kyRXdJQmNOTWpFd016RXdNRFUwTlRReldoZ1BNakExTVRBek1UQXdOVFUxTkROYQpNQTB4Q3pBSkJnTlZCQU1UQW1OaE1JSUNJakFOQmdrcWhraUc5dzBCQVFFRkFBT0NBZzhBTUlJQ0NnS0NBZ0VBCjBvVWthNnV3cGFERHBNMXIwcitKaEFWcG1JUzFpb3RlZHlMbGlsdDBJOVZBUGtCWFA3TVZUR0tkby8xdzdtS3kKdm9kU0JZNHRidzZ6SVhqd3N5TzhSZzYrYjFkTTVBL2kxbDVmbzRmbmtuOURFM0toSzRZTnAzZlhRVVMvbzJFSAozNFFHMyt5dmtwWT [...]
    url: https://localhost:8443/mutate-pods
  failurePolicy: Ignore
  matchPolicy: Exact
  name: aks-webhook-admission-controller.azmk8s.io
  namespaceSelector: {}
  objectSelector: {}
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
    scope: '*'
  sideEffects: Unknown
  timeoutSeconds: 30
